--- a/examples/n-marriott.conf
+++ b/examples/n-marriott.conf
@@ -16,26 +16,25 @@ bind E switch 2
 bind I list-windows
 bind i list-windows
 
-# safe from pkill tmux ;-)
-new -d -s0 -nirssi 'screen -RS irssi irssi'
-neww -s0 -d -ntodo 'exec emacs ~/TODO'
-neww -s0 -d -nncmpc
-neww -s0 -d
-neww -s0 -d
-neww -s0 -d
-neww -s0 -d
-neww -s0 -d
-neww -s0 -d
-neww -s0 -d
+new -d -s0 -nirssi 'screen -DRS irssi irssi' # safe from pkill tmux ;-)
+neww -d -ntodo 'exec emacs ~/TODO'
+neww -d -nncmpc
+neww -d
+neww -d
+neww -d
+neww -d
+neww -d
+neww -d
+neww -d
 
 new -d -s1
-linkw -dk -s1 -i0 0 0
-neww -s1 -d
-neww -s1 -d
-neww -s1 -d
+linkw -dk -i0 0 0
+neww -d
+neww -d
+neww -d
 
 new -d -s2
-linkw -dk -s2 -i0 0 0
-neww -s2 -d
-neww -s2 -d
-neww -s2 -d
+linkw -dk -i0 0 0
+neww -d
+neww -d
+neww -d
