--- a/examples/n-marriott.conf
+++ b/examples/n-marriott.conf
@@ -1,11 +1,14 @@
+# Default global options.
 set status-bg green
 set default-command "exec /bin/ksh -l"
 set bell-action none
 
+# Prefix key.
 set prefix ^A
 unbind ^B
 bind ^A send-prefix
 
+# Keys to switch session.
 bind q switch 0
 bind Q switch 0
 bind w switch 1
@@ -13,10 +16,15 @@ bind W switch 1
 bind e switch 2
 bind E switch 2
 
+# Other key bindings.
 bind I list-windows
 bind i list-windows
 
+# First session.
 new -d -s0 -nirssi 'screen -DRS irssi irssi' # safe from pkill tmux ;-)
+setw -s0 -i0 monitor-activity on
+set -s0 status-bg green
+set -s0 status-left '[0]'
 neww -d -ntodo 'exec emacs ~/TODO'
 neww -d -nncmpc
 neww -d
@@ -27,14 +35,21 @@ neww -d
 neww -d
 neww -d
 
+# Second session.
 new -d -s1
+set -s1 status-bg cyan
+set -s1 status-left '[1]'
 linkw -dk -i0 0 0
 neww -d
 neww -d
 neww -d
 
+# Third session.
 new -d -s2
+set -s2 status-bg yellow
+set -s2 status-left '[2]'
 linkw -dk -i0 0 0
 neww -d
 neww -d
 neww -d
+
