--- a/examples/n-marriott.conf
+++ b/examples/n-marriott.conf
@@ -9,22 +9,31 @@ unbind ^B
 bind ^A send-prefix
 
 # Keys to switch session.
-bind q switch 0
-bind Q switch 0
-bind w switch 1
-bind W switch 1
-bind e switch 2
-bind E switch 2
+bind q switch -t0
+bind Q switch -t0
+bind w switch -t1
+bind W switch -t1
+bind e switch -t2
+bind E switch -t2
 
 # Other key bindings.
-bind I list-windows
 bind i list-windows
+bind I list-windows
+
+bind m setw monitor-activity
+bind M setw monitor-activity
+
+bind y setw force-width 81
+bind Y setw force-width 81
+bind u setw force-width 0
+bind U setw force-width 0
 
 # First session.
 new -d -s0 -nirssi 'screen -DRS irssi irssi' # safe from pkill tmux ;-)
-setw -s0 -i0 monitor-activity on
-set -s0 status-bg green
-set -s0 status-left '[0]'
+setw -t0:0 monitor-activity on
+setw -t0:0 aggressive-resize on
+set -t0 status-bg green
+set -t0 status-left '[0]'
 neww -d -ntodo 'exec emacs ~/TODO'
 neww -d -nncmpc
 neww -d
@@ -37,19 +46,18 @@ neww -d
 
 # Second session.
 new -d -s1
-set -s1 status-bg cyan
-set -s1 status-left '[1]'
-linkw -dk -i0 0 0
+set -t1 status-bg cyan
+set -t1 status-left '[1]'
+linkw -dk -t0 -s0:0
 neww -d
 neww -d
 neww -d
 
 # Third session.
 new -d -s2
-set -s2 status-bg yellow
-set -s2 status-left '[2]'
-linkw -dk -i0 0 0
+set -t2 status-bg yellow
+set -t2 status-left '[2]'
+linkw -dk -t0 -s0:0
 neww -d
 neww -d
 neww -d
-
