Make window options work the same was as session options, add mode-fg/mode-bg options, force -g for global on set/show/setw/showw/

--- a/examples/n-marriott.conf
+++ b/examples/n-marriott.conf
@@ -1,32 +1,29 @@
 # Default global options.
-set status-bg green
-set default-command "exec /bin/ksh -l"
-set bell-action none
+set -g status-bg green
+set -g status-right-length 60
+set -g default-command "exec /bin/ksh -l"
+set -g bell-action none
+
+# Default global window options.
+setw -g remain-on-exit on
 
 # Prefix key.
-set prefix ^A
+set -g prefix ^A
 unbind ^B
 bind ^A send-prefix
 
 # Keys to switch session.
 bind q switch -t0
-bind Q switch -t0
 bind w switch -t1
-bind W switch -t1
 bind e switch -t2
-bind E switch -t2
 
 # Other key bindings.
 bind i list-windows
-bind I list-windows
 
 bind m setw monitor-activity
-bind M setw monitor-activity
 
 bind y setw force-width 81
-bind Y setw force-width 81
 bind u setw force-width 0
-bind U setw force-width 0
 
 # First session.
 new -d -s0 -nirssi 'screen -DRS irssi irssi' # safe from pkill tmux ;-)
@@ -35,7 +32,7 @@ setw -t0:0 aggressive-resize on
 set -t0 status-bg green
 set -t0 status-left '[0]'
 neww -d -ntodo 'exec emacs ~/TODO'
-neww -d -nncmpc
+neww -d -nncmpc 'exec ncmpc -f ~/.ncmpc.conf'
 neww -d
 neww -d
 neww -d
