Make last-window repeatable too; update my configuration backup, er, example.

--- a/examples/n-marriott.conf
+++ b/examples/n-marriott.conf
@@ -3,19 +3,23 @@ set -g status-bg green
 set -g status-right-length 60
 set -g default-command "exec /bin/ksh -l"
 set -g bell-action none
+set -g lock-after-time 1800
 
 # Default global window options.
-setw -g remain-on-exit on
+#setw -g remain-on-exit on
 
 # Prefix key.
-set -g prefix ^A
-unbind ^B
-bind ^A send-prefix
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
+# Unlock password.
+pass -c '$2a$06$7LpuTSfDjcz.KD3a9mdEuuJmC.zEq6RBqHWMjdv9/qqzrfWedUBHe'
 
 # Keys to switch session.
-bind q switch -t0
-bind w switch -t1
-bind e switch -t2
+bind q switchc -t0
+bind w switchc -t1
+bind e switchc -t2
 
 # Other key bindings.
 bind i list-windows
@@ -25,15 +29,22 @@ bind m setw monitor-activity
 bind y setw force-width 81
 bind u setw force-width 0
 
-# First session.
-new -d -s0 -nirssi 'screen -DRS irssi irssi' # safe from pkill tmux ;-)
+bind ~ split-window "top -s 0.5"
+bind "#" split-window "ncmpc -f ~/.ncmpc.conf"
+bind / command-prompt "split-window 'man %%'"
+
+# First session.s
+new -d -s0 -nirssi 'ssh -t natalya screen -DRS irssi irssi'
 setw -t0:0 monitor-activity on
 setw -t0:0 aggressive-resize on
 set -t0 status-bg green
 set -t0 status-left '[0]'
 neww -d -ntodo 'exec emacs ~/TODO'
+setw -t0:1 aggressive-resize on
 neww -d -nncmpc 'exec ncmpc -f ~/.ncmpc.conf'
-neww -d
+setw -t0:2 aggressive-resize on
+neww -d -nmutt 'exec mutt'
+setw -t0:3 aggressive-resize on
 neww -d
 neww -d
 neww -d
@@ -46,6 +57,12 @@ new -d -s1
 set -t1 status-bg cyan
 set -t1 status-left '[1]'
 linkw -dk -t0 -s0:0
+linkw -dk -t1 -s0:1
+linkw -dk -t2 -s0:2
+linkw -dk -t3 -s0:3
+neww -d
+neww -d
+neww -d
 neww -d
 neww -d
 neww -d
@@ -55,6 +72,12 @@ new -d -s2
 set -t2 status-bg yellow
 set -t2 status-left '[2]'
 linkw -dk -t0 -s0:0
+linkw -dk -t1 -s0:1
+linkw -dk -t2 -s0:2
+linkw -dk -t3 -s0:3
+neww -d
+neww -d
+neww -d
 neww -d
 neww -d
 neww -d
