Tweak a little bit.

--- a/examples/screen-keys.conf
+++ b/examples/screen-keys.conf
@@ -1,36 +1,42 @@
-# $Id: screen-keys.conf,v 1.1 2009-01-16 18:24:45 nicm Exp $
+# $Id: screen-keys.conf,v 1.2 2009-01-16 20:04:54 nicm Exp $
 #
 # This configuration file binds many of the common GNU screen key bindings to
 # appropriate tmux key bindings. Note that for some key bindings there is no
 # tmux analogue and also that this set omits binding some commands available in
 # tmux but not in screen.
 
-### Unbind most existing tmux key bindings.
-unbind a
-unbind b
+### Unbind existing tmux key bindings (except 0-9).
+unbind '"'
+unbind '#'
+unbind &
+unbind ,
+unbind -
+unbind :
+unbind =
+unbind ?
+unbind [
+unbind '\'
+unbind ]
 unbind c
 unbind d
-unbind e
-unbind f
-unbind g
-unbind h
-unbind i
-unbind j
-unbind k
 unbind l
-unbind m
 unbind n
 unbind o
 unbind p
-unbind q
 unbind r
 unbind s
 unbind t
-unbind u
-unbind v
 unbind w
-unbind y
-unbind z
+unbind x
+
+unbind Up
+unbind Down
+unbind M-Up
+unbind M-Down
+unbind C-Up
+unbind C-Down
+
+unbind C-b
 
 ### Set the prefix to ^A.
 set -g prefix ^A
@@ -165,17 +171,6 @@ bind l refresh-client
 # xon ^Q q
 
 # select -
-
-# select 0
-# select 1
-# select 2
-# select 3
-# select 4
-# select 5
-# select 6
-# select 7
-# select 8
-# select 9
 
 # paste ] ^]
 bind ] paste-buffer
