Update with new features.

--- a/examples/n-marriott.conf
+++ b/examples/n-marriott.conf
@@ -22,12 +22,14 @@ bind w switchc -t1
 bind e switchc -t2
 
 # Other key bindings.
-bind i list-windows
+bind i choose-window
 
 bind m setw monitor-activity
 
 bind y setw force-width 81
 bind u setw force-width 0
+
+bind N neww \; splitw -d
 
 bind ~ split-window "top -s 0.5"
 bind "#" split-window "ncmpc -f ~/.ncmpc.conf"
@@ -38,7 +40,6 @@ new -d -s0 -nirssi 'ssh -t natalya screen -DRS irssi irssi'
 setw -t0:0 monitor-activity on
 setw -t0:0 aggressive-resize on
 set -t0 status-bg green
-set -t0 status-left '[0]'
 neww -d -ntodo 'exec emacs ~/TODO'
 setw -t0:1 aggressive-resize on
 neww -d -nncmpc 'exec ncmpc -f ~/.ncmpc.conf'
@@ -51,11 +52,16 @@ neww -d
 neww -d
 neww -d
 neww -d
+neww -d
+neww -d
+neww -d
+neww -d
+neww -d
+neww -d
 
 # Second session.
 new -d -s1
 set -t1 status-bg cyan
-set -t1 status-left '[1]'
 linkw -dk -t0 -s0:0
 linkw -dk -t1 -s0:1
 linkw -dk -t2 -s0:2
@@ -70,7 +76,6 @@ neww -d
 # Third session.
 new -d -s2
 set -t2 status-bg yellow
-set -t2 status-left '[2]'
 linkw -dk -t0 -s0:0
 linkw -dk -t1 -s0:1
 linkw -dk -t2 -s0:2
