Document -L and -8, fix synopsis.

--- a/examples/n-marriott.conf
+++ b/examples/n-marriott.conf
@@ -29,14 +29,15 @@ bind m setw monitor-activity
 bind y setw force-width 81
 bind u setw force-width 0
 
+bind D detach \; lock
 bind N neww \; splitw -d
 
-bind ~ split-window "top -s 0.5"
-bind "#" split-window "ncmpc -f ~/.ncmpc.conf"
-bind / command-prompt "split-window 'man %%'"
+bind ~ split-window "exec top -s 0.5"
+bind "#" split-window "exec ncmpc -f ~/.ncmpc.conf"
+bind / command-prompt "split-window 'exec man %%'"
 
-# First session.s
-new -d -s0 -nirssi 'ssh -t natalya screen -DRS irssi irssi'
+# First session.
+new -d -s0 -nirssi 'exec ssh -t natalya screen -DRS irssi irssi'
 setw -t0:0 monitor-activity on
 setw -t0:0 aggressive-resize on
 set -t0 status-bg green
@@ -46,10 +47,6 @@ neww -d -nncmpc 'exec ncmpc -f ~/.ncmpc.conf'
 setw -t0:2 aggressive-resize on
 neww -d -nmutt 'exec mutt'
 setw -t0:3 aggressive-resize on
-neww -d
-neww -d
-neww -d
-neww -d
 neww -d
 neww -d
 neww -d
