Escape ~, pointed out by tcunha.

--- a/examples/n-marriott.conf
+++ b/examples/n-marriott.conf
@@ -32,7 +32,7 @@ bind u setw force-width 0
 bind D detach \; lock
 bind N neww \; splitw -d
 
-bind ~ split-window "exec top -s 0.5"
+bind '~' split-window "exec top -s 0.5"
 bind "#" split-window "exec ncmpc -f ~/.ncmpc.conf"
 bind / command-prompt "split-window 'exec man %%'"
 
