This file is not kept up to date and too many people are using it as-is then finding tmux key bindings missing. Trim it down and make it clear this is an example only.

--- a/examples/screen-keys.conf
+++ b/examples/screen-keys.conf
@@ -1,187 +1,102 @@
-# $Id: screen-keys.conf,v 1.2 2009-01-16 20:04:54 nicm Exp $
+# $Id: screen-keys.conf,v 1.3 2009-08-07 12:09:50 nicm Exp $
 #
 # This configuration file binds many of the common GNU screen key bindings to
 # appropriate tmux key bindings. Note that for some key bindings there is no
 # tmux analogue and also that this set omits binding some commands available in
 # tmux but not in screen.
+#
+# Note this is only a selection of key bindings and they are in addition to the
+# normal tmux key bindings. This is intended as an example not as to be used
+# as-is.
 
 ### Unbind existing tmux key bindings (except 0-9).
-unbind '"'
-unbind '#'
-unbind &
-unbind ,
-unbind -
-unbind :
-unbind =
-unbind ?
-unbind [
-unbind '\'
-unbind ]
-unbind c
-unbind d
-unbind l
-unbind n
-unbind o
-unbind p
-unbind r
-unbind s
-unbind t
-unbind w
-unbind x
 
-unbind Up
-unbind Down
-unbind M-Up
-unbind M-Down
-unbind C-Up
-unbind C-Down
-
+# Set the prefix to ^A.
 unbind C-b
-
-### Set the prefix to ^A.
 set -g prefix ^A
-
-### Bind appropriate commands similar to screen.
-#removebuf = 
-
-#clear C 
-
-#lockscreen ^X x 
-bind ^X lock-server
-bind x lock-server
-
-#reset Z 
-
-#colon :
-bind : command-prompt
-
-#log H 
-
-# screen ^C c 
-bind ^C new-window
-bind c new-window
-
-# copy ^[ [ 
-bind ^[ copy-mode
-bind [ copy-mode
-
-# login L 
-
-# select '
-bind "'" select-prompt
-
-# detach ^D d
-bind ^D detach
-
-# meta a 
 bind a send-prefix
 
-# silence _ 
+# Bind appropriate commands similar to screen.
+# lockscreen ^X x 
+unbind ^X
+bind ^X lock-server
+unbind x
+bind x lock-server
 
-# digraph ^V 
+# screen ^C c 
+unbind ^C
+bind ^C new-window
+bind c
+bind c new-window
 
-# monitor M 
-
-# split S
+# detach ^D d
+unbind ^D
+bind ^D detach
 
 # displays * 
+unbind *
 bind * list-clients
 
 # next ^@ ^N sp n 
+unbind ^@
 bind ^@ next-window
+unbind ^N
 bind ^N next-window
+unbind " "
 bind " " next-window
+unbind n
 bind n next-window
 
-# suspend ^Z z 
-
-# dumptermcap .
-
-# number N 
-
-# time ^T t
- 
-# fit F
-
-# only Q
-
 # title A
+unbind A
 bind A command-prompt "rename-window %%"
 
-# flow ^F f
- 
 # other ^A
+unbind ^A
 bind ^A last-window
 
-# vbell ^G 
-
-# focus ^I 
-
-# pow_break B 
-
-# version v 
-bind v server-info
-
-# hardcopy h
-
-# pow_detach D
-
-# width W 
-
-# help ? 
-bind ? list-keys
-
 # prev ^H ^P p ^? 
+unbind ^H
 bind ^H previous-window
+unbind ^P
 bind ^P previous-window
+unbind p
 bind p previous-window
-#XXX bind ^? previous-window
+unbind BSpace
+bind BSpace previous-window
 
 # windows ^W w 
+unbind ^W
 bind ^W list-windows
+unbind w
 bind w list-windows
 
-# history { }
-
 # quit \ 
+unbind \
 bind \ kill-server
 
-# wrap ^R r
-
-# info i 
-
-# readbuf < 
-
-# writebuf > 
-
 # kill K k 
+unbind K
 bind K kill-window
+unbind k
 bind k kill-window
 
 # redisplay ^L l 
+unbind ^L
 bind ^L refresh-client
+unbind l
 bind l refresh-client
 
-# xoff ^S s 
-
-# lastmsg ^M m 
-
-# remove X 
-
-# xon ^Q q
-
-# select -
-
-# paste ] ^]
-bind ] paste-buffer
-bind ^] paste-buffer
-
 # split -v |
+unbind |
 bind | split-window
 
 # :kB: focus up
+unbind Tab
 bind Tab down-pane
+unbind BTab
 bind BTab up-pane
 
 # " windowlist -b
+unbind '"'
 bind '"' choose-window
