--- a/www/index.html.in
+++ b/www/index.html.in
@@ -1,24 +1,74 @@
-<!-- $Id: index.html.in,v 1.2 2009-08-05 16:39:28 nicm Exp $ -->
-<html>
-<head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>tmux</title>
-</head>
-<body>
-<b>Welcome to the tmux website, such as it is!</b>
-<p>tmux is a &quot;terminal multiplexer&quot;, it enables a number of terminals (or windows) to be accessed and controlled from a single terminal. tmux is intended to be a simple, modern, BSD-licensed alternative to programs such as GNU screen.</p>
-<p><a href="http://downloads.sourceforge.net/tmux/tmux-%%VERSION%%.tar.gz">Download tmux %%VERSION%%.</a></p>
-<p>Please see the <a href="http://tmux.cvs.sourceforge.net/viewvc/*checkout*/tmux/tmux/NOTES">release notes</a> and <a href="http://tmux.cvs.sourceforge.net/viewvc/*checkout*/tmux/tmux/FAQ">FAQ</a>.</p>
-<p>Also available are: <a href="http://tmux.cvs.sourceforge.net/viewvc/*checkout*/tmux/tmux/CHANGES">the change log</a> (up to CVS HEAD), <a href="http://sf.net/projects/tmux">the project page</a> and <a href="https://sourceforge.net/mail/?group_id=200378">mailing lists</a>. An IRC channel, #tmux, is on the Freenode network.</p>
-<b>Screenshots</b>
-<table><tr>
-<td><a href="tmux1.png"><img src="small-tmux1.png"></a></td>
-<td><a href="tmux2.png"><img src="small-tmux2.png"></a></td>
-<td><a href="tmux3.png"><img src="small-tmux3.png"></a></td>
-</tr><tr>
-<td><a href="tmux4.png"><img src="small-tmux4.png"></a></td>
-<td><a href="tmux5.png"><img src="small-tmux5.png"></a></td>
-<td><a href="tmux6.png"><img src="small-tmux6.png"></a></td>
-</tr></table>
-</body>
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <title>tmux</title>
+        <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
+    </head>
+    <body>
+        <div id="body-wrapper">
+            <div id="left-menu-container">
+                <p id="upper-left-title">tmux</p>
+                <ul id="left-menu">
+                <li><a href="http://downloads.sourceforge.net/tmux/tmux-1.0.tar.gz">Download</a></li>
+                <li><a href="http://tmux.cvs.sourceforge.net/viewvc/*checkout*/tmux/tmux/NOTES">Release Notes</a>
+                <li><a href="http://tmux.cvs.sourceforge.net/viewvc/*checkout*/tmux/tmux/CHANGES">Changelog</a></li>
+                <li><a href="http://tmux.cvs.sourceforge.net/viewvc/*checkout*/tmux/tmux/FAQ">FAQ</a></li>
+		<li><a href="http://tmux.cvs.sourceforge.net/viewvc/tmux/tmux/examples/">Examples</a></li>
+                <li>&nbsp;</li>
+                <li class="menu-headings">Source Code</li>
+		<li><a href="http://tmux.cvs.sf.net/viewvc/tmux/tmux/">SourceForge</a></li>
+		<li><a href="http://www.openbsd.org/cgi-bin/cvsweb/src/usr.bin/tmux/">OpenBSD</a></li>
+                <li>&nbsp;</li>
+                <li class="menu-headings">Support</li>
+                <li><a href="https://lists.sourceforge.net/lists/listinfo/tmux-users">tmux-users</a></li>
+                <li><a href="https://lists.sourceforge.net/lists/listinfo/tmux-cvs">tmux-cvs</a></li>
+                <li>IRC: #tmux on Freenode</li>
+                <li><a href="http://sf.net/projects/tmux">SourceForge Project Page</a></li>
+                </ul>
+            </div>
+            <div id="main-content-wrapper">
+
+<p>tmux is a terminal multiplexer: it enables a number of terminals (or
+windows), each running a separate program, to be created, accessed, and
+controlled from a single screen. tmux may be detached from a screen and
+continue running in the background, then later reattached.</p>
+
+<p>tmux uses a client-server model. The server holds multiple sessions and each
+window is a independent entity which may be freely linked to multiple sessions,
+moved between sessions and otherwise manipulated. Each session may be attached
+to (display and accept keyboard input from) multiple clients.</p>
+
+<p>tmux is intended to be a modern, BSD-licensed alternative to programs such
+as GNU screen. Major features include:</p>
+
+<ul>
+<li>A powerful, consistent, well-documented and easily scriptable command
+interface.</li>
+<li>A window may be split horizontally and vertically into panes.</li>
+<li>Panes can be freely moved and resized, or arranged into one of four preset
+layouts. </li>
+<li>Support for UTF-8 and 256-colour terminals.</li>
+<li>Copy and paste with multiple buffers.</li>
+<li>Interactive menus to select windows, sessions or clients.</li>
+<li>Change the current window by searching for text in the target.</li>
+<li>Terminal locking, manually or after a timeout.</li>
+<li>A clean, easily extended, BSD-licensed codebase, under active
+development.</li>
+</ul>
+
+<p>tmux is part of the <a href="http://www.openbsd.org">OpenBSD</a> base
+system. The portable version is hosted on SourceForge and runs on Linux,
+FreeBSD, NetBSD, Solaris and AIX.</p>
+
+                <div id="screenshots">
+                    <a href="tmux3.png"><img src="small-tmux3.png"></a>
+                    <a href="tmux4.png"><img src="small-tmux4.png"></a>
+                    <a href="tmux5.png"><img src="small-tmux5.png"></a>
+                </div>
+            </div>
+       </div>
+    </body>
 </html>
+
