Add or clarify licenses where appropriate.

--- a/examples/h-boetes.conf
+++ b/examples/h-boetes.conf
@@ -1,3 +1,7 @@
+# $Id: h-boetes.conf,v 1.2 2009-10-25 21:45:26 nicm Exp $
+#
+# From Han Boetes.
+
 set -g default-command zsh
 set -g status-right "#(uptime|awk '{print $11}') #(date)"
 
