--- a/examples/n-marriott.conf
+++ b/examples/n-marriott.conf
@@ -1,52 +1,66 @@
+# $Id: n-marriott.conf,v 1.10 2009-10-25 21:45:26 nicm Exp $
+#
+# By Nicholas Marriott. Public domain.
+
 # Default global options.
 set -g status-bg green
-set -g status-right-length 60
-set -g default-command "exec /bin/ksh -l"
+set -g status-right "%H:%M" # %d-%b-%y
 set -g bell-action none
 set -g lock-after-time 1800
 
 # Default global window options.
-#setw -g remain-on-exit on
+setw -g remain-on-exit on
+setw -g window-status-current-attr "underscore"
 
 # Prefix key.
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Unlock password.
-pass -c '$2a$06$7LpuTSfDjcz.KD3a9mdEuuJmC.zEq6RBqHWMjdv9/qqzrfWedUBHe'
-
 # Keys to switch session.
-bind q switchc -t0
-bind w switchc -t1
-bind e switchc -t2
+bind Q switchc -t0
+bind W switchc -t1
+bind E switchc -t2
 
 # Other key bindings.
-bind i choose-window
+bind F1 selectw -t:10
+bind F2 selectw -t:11
+bind F3 selectw -t:12
+bind F4 selectw -t:13
+bind F5 selectw -t:14
+bind F6 selectw -t:15
+bind F7 selectw -t:16
+bind F8 selectw -t:17
+bind F9 selectw -t:18
+bind F10 selectw -t:19
+bind F11 selectw -t:20
+bind F12 selectw -t:21
 
 bind m setw monitor-activity
 
 bind y setw force-width 81
 bind u setw force-width 0
 
-bind D detach \; lock
-bind N neww \; splitw -d
-
-bind '~' split-window "exec top -s 0.5"
-bind "#" split-window "exec ncmpc -f ~/.ncmpc.conf"
-bind / command-prompt "split-window 'exec man %%'"
+bind -n F1 run-shell 'mpc toggle >/dev/null 2>&1'
+bind -n F2 run-shell 'mpc'
+bind -n F3 run-shell 'mpc prev >/dev/null 2>&1'
+bind -n F4 run-shell 'mpc next >/dev/null 2>&1'
+bind -n F5 run-shell 'mpc volume -5 >/dev/null 2>&1'
+bind -n F6 run-shell 'mpc volume +5 >/dev/null 2>&1'
 
 # First session.
-new -d -s0 -nirssi 'exec ssh -t natalya screen -DRS irssi irssi'
+new -d -s0 -nirssi 'exec ssh -t natalya exec sh ~/bin/tmux-start'
 setw -t0:0 monitor-activity on
 setw -t0:0 aggressive-resize on
 set -t0 status-bg green
 neww -d -ntodo 'exec emacs ~/TODO'
 setw -t0:1 aggressive-resize on
-neww -d -nncmpc 'exec ncmpc -f ~/.ncmpc.conf'
+neww -d -ntodo2 'exec emacs ~/TODO2'
 setw -t0:2 aggressive-resize on
-neww -d -nmutt 'exec mutt'
+neww -d -nncmpc 'exec ncmpc -f ~/.ncmpc.conf'
 setw -t0:3 aggressive-resize on
+neww -d -nmutt 'exec mutt'
+setw -t0:4 aggressive-resize on
 neww -d
 neww -d
 neww -d
@@ -63,6 +77,7 @@ linkw -dk -t0 -s0:0
 linkw -dk -t1 -s0:1
 linkw -dk -t2 -s0:2
 linkw -dk -t3 -s0:3
+linkw -dk -t4 -s0:4
 neww -d
 neww -d
 neww -d
@@ -77,6 +92,7 @@ linkw -dk -t0 -s0:0
 linkw -dk -t1 -s0:1
 linkw -dk -t2 -s0:2
 linkw -dk -t3 -s0:3
+linkw -dk -t4 -s0:4
 neww -d
 neww -d
 neww -d
