--- a/examples/screen-keys.conf
+++ b/examples/screen-keys.conf
@@ -1,4 +1,6 @@
-# $Id: screen-keys.conf,v 1.3 2009-08-07 12:09:50 nicm Exp $
+# $Id: screen-keys.conf,v 1.4 2009-10-25 21:45:26 nicm Exp $
+#
+# By Nicholas Marriott. Public domain.
 #
 # This configuration file binds many of the common GNU screen key bindings to
 # appropriate tmux key bindings. Note that for some key bindings there is no
