--- a/examples/screen-keys.conf
+++ b/examples/screen-keys.conf
@@ -1,4 +1,4 @@
-# $Id: screen-keys.conf,v 1.4 2009-10-25 21:45:26 nicm Exp $
+# $Id: screen-keys.conf,v 1.5 2009-10-25 21:58:05 nicm Exp $
 #
 # By Nicholas Marriott. Public domain.
 #
@@ -75,13 +75,13 @@ bind w list-windows
 
 # quit \ 
 unbind \
-bind \ kill-server
+bind \ confirm-before "kill-server"
 
 # kill K k 
 unbind K
-bind K kill-window
+bind K confirm-before "kill-window"
 unbind k
-bind k kill-window
+bind k confirm-before "kill-window"
 
 # redisplay ^L l 
 unbind ^L
