--- a/examples/n-marriott.conf
+++ b/examples/n-marriott.conf
@@ -1,4 +1,4 @@
-# $Id: n-marriott.conf,v 1.10 2009-10-25 21:45:26 nicm Exp $
+# $Id: n-marriott.conf,v 1.11 2009-11-24 19:03:59 nicm Exp $
 #
 # By Nicholas Marriott. Public domain.
 
@@ -11,6 +11,7 @@ set -g lock-after-time 1800
 # Default global window options.
 setw -g remain-on-exit on
 setw -g window-status-current-attr "underscore"
+#setw -g xterm-keys on
 
 # Prefix key.
 set -g prefix C-a
@@ -48,6 +49,10 @@ bind -n F4 run-shell 'mpc next >/dev/null 2>&1'
 bind -n F5 run-shell 'mpc volume -5 >/dev/null 2>&1'
 bind -n F6 run-shell 'mpc volume +5 >/dev/null 2>&1'
 
+# Hide and show window name from status line
+bind '-' setw window-status-format '#I'\; setw window-status-current-format '#I'
+bind '+' setw window-status-format '#I:#W#F'\; setw window-status-current-format '#I:#W#F'
+
 # First session.
 new -d -s0 -nirssi 'exec ssh -t natalya exec sh ~/bin/tmux-start'
 setw -t0:0 monitor-activity on
@@ -61,6 +66,10 @@ neww -d -nncmpc 'exec ncmpc -f ~/.ncmpc.conf'
 setw -t0:3 aggressive-resize on
 neww -d -nmutt 'exec mutt'
 setw -t0:4 aggressive-resize on
+neww -d
+neww -d
+neww -d
+neww -d
 neww -d
 neww -d
 neww -d
