No more up-pane/down-pane.

--- a/examples/screen-keys.conf
+++ b/examples/screen-keys.conf
@@ -1,4 +1,4 @@
-# $Id: screen-keys.conf,v 1.6 2010-02-02 21:34:16 nicm Exp $
+# $Id: screen-keys.conf,v 1.7 2010-07-31 11:39:13 nicm Exp $
 #
 # By Nicholas Marriott. Public domain.
 #
@@ -93,9 +93,9 @@ bind | split-window
 
 # :kB: focus up
 unbind Tab
-bind Tab down-pane
+bind Tab select-pane -t:.+
 unbind BTab
-bind BTab up-pane
+bind BTab select-pane -t:.-
 
 # " windowlist -b
 unbind '"'
