--- a/examples/vim-keys.conf
+++ b/examples/vim-keys.conf
@@ -1,23 +1,24 @@
-# $Id: vim-keys.conf,v 1.1 2010-01-17 16:24:09 nicm Exp $
+# $Id: vim-keys.conf,v 1.2 2010-09-18 09:36:15 nicm Exp $
 #
-# vim-keys.conf, v1.0 2010/01/15
+# vim-keys.conf, v1.2 2010/09/12
 #
 # By Daniel Thau.  Public domain.
 #
 # This configuration file binds many vi- and vim-like bindings to the
 # appropriate tmux key bindings.  Note that for many key bindings there is no
-# tmux analogue.
+# tmux analogue.  This is intended for tmux 1.3, which handles pane selection
+# differently from the previous versions
 
 # split windows like vim
 # vim's definition of a horizontal/vertical split is reversed from tmux's
 bind s split-window -v
 bind v split-window -h
 
-# move around panes with j and k, a bit like vim
-# as of tmux 1.1, there is no way to move based on pane position (ie, no way to
-# move the pane to the right)
-bind j down-pane
-bind k up-pane
+# move around panes with hjkl, as one would in vim after pressing ctrl-w
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
