Copy osdep-unknown.c for AIX to make @PLATFORM@ work.

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-# $Id: configure.ac,v 1.10 2011-01-10 21:51:56 nicm Exp $
+# $Id: configure.ac,v 1.11 2011-01-10 22:00:47 nicm Exp $
 
 # Miscellaneous autofoo bullshit.
 AC_INIT(tmux, 1.5)
@@ -320,6 +320,10 @@ fi
 # Figure out the platform for osdep-*.c and forkpty-*.c.
 AC_MSG_CHECKING(platform)
 case "$host_os" in
+	*aix*)
+		AC_MSG_RESULT(aix)
+		PLATFORM=aix
+		;;
 	*darwin*)
 		AC_MSG_RESULT(darwin)
 		AC_DEFINE(BROKEN_CMSG_FIRSTHDR)
@@ -351,6 +355,7 @@ case "$host_os" in
 		;;	
 esac
 AC_SUBST(PLATFORM)
+AM_CONDITIONAL(IS_AIX, test "x$PLATFORM" = xaix)
 AM_CONDITIONAL(IS_DARWIN, test "x$PLATFORM" = xdarwin)
 AM_CONDITIONAL(IS_LINUX, test "x$PLATFORM" = xlinux)
 AM_CONDITIONAL(IS_FREEBSD, test "x$PLATFORM" = xfreebsd)
